@startuml
title Delete Vocabulary Class Diagram (/vocabulary/delete and /api/admin/words/{id})
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide empty methods
hide empty fields
note top
Generated from admin-delete-vocabulary-sequence.puml.
Classes and members are populated from current repository source when a matching code type exists.
end note

class VocabularyController <<frontend_controller>> {
  "- _apiClient : IVocaNovaApiClient"
  "- _translator : ITranslator"
  --
  "+ Delete(id: uint, returnUrl: stringNullable, cancellationToken: CancellationToken) : TaskOfIActionResult"
  "+ DeleteAudio(id: uint, audioId: uint, cancellationToken: CancellationToken) : TaskOfIActionResult"
  "+ DeleteImage(id: uint, cancellationToken: CancellationToken) : TaskOfIActionResult"
}

class AdminWordsController <<backend_controller>> {
  "- _service : IWordAdminService"
  --
  "+ SoftDelete(id: uint, cancellationToken: CancellationToken) : TaskOfIActionResult"
}

class IWordAdminService <<service_interface>> {
  "+ SearchAsync(query: AdminWordQuery, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfPagedCollectionOfAdminWordListItem"
  "+ CreateAsync(command: CreateWordCommand, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordDetail"
  "+ UpdateAsync(wordId: uint, command: UpdateWordCommand, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordDetail"
  "+ ImportCsvAsync(content: UploadedContentNullable, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfBulkImportResult"
  "+ SoftDeleteAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfbool"
  "+ RestoreAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfbool"
  "+ UploadImageAsync(wordId: uint, content: UploadedContentNullable, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordDetail"
  "+ UpdateImageUrlAsync(wordId: uint, imageUrl: stringNullable, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordDetail"
  "+ UploadAudioAsync(wordId: uint, accent: stringNullable, content: UploadedContentNullable, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordAudio"
  "+ SoftDeleteAudioAsync(wordId: uint, audioId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfbool"
  "+ CreateSenseAsync(wordId: uint, command: CreateSenseCommand, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordSense"
  "+ UpdateSenseAsync(wordId: uint, senseId: uint, command: UpdateSenseCommand, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfWordSense"
  "+ SoftDeleteSenseAsync(wordId: uint, senseId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfbool"
  "+ RestoreSenseAsync(wordId: uint, senseId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryResultOfbool"
}

class WordAdminService <<service>> {
  "- _repository : IWordAdminRepository"
  "- _audioStorage : IWordAudioStorageNullable"
  "- _imageStorage : IWordImageStorageNullable"
  "- _wordDetailCache : IWordDetailCacheNullable"
  "- _userListCache : IUserListCacheNullable"
  --
  "+ SoftDeleteAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfDictionaryBool"
}

class Word <<entity>> {
  "+ WordId : uint"
  "+ Word1 : string"
  "+ WordKey : string"
  "+ CefrLevel : stringNullable"
  "+ PhoneticUk : stringNullable"
  "+ PhoneticUs : stringNullable"
  "+ ImageUrl : stringNullable"
  "+ IsPhrase : bool"
  "+ Status : string"
  "+ CreatedAt : DateTime"
  "+ UpdatedAt : DateTime"
  "+ AiGradingCaches : ICollectionOfAiGradingCache"
}

class UserListWord <<entity>> {
  "+ UserId : uint"
  "+ ListId : uint"
  "+ WordId : uint"
  "+ AddMethod : string"
  "+ Note : stringNullable"
  "+ AddedAt : DateTime"
  "+ Status : string"
  "+ List : UserList"
  "+ User : User"
  "+ Word : Word"
}

class UserWordProgress <<entity>> {
  "+ ProgressId : uint"
  "+ UserId : uint"
  "+ WordId : uint"
  "+ TestCount : int"
  "+ CorrectCount : int"
  "+ WrongCount : int"
  "+ ConsecutiveCorrect : int"
  "+ IsInWrongList : bool"
  "+ MasteryLevel : int"
  "+ SrsInterval : int"
  "+ EaseFactor : float"
  "+ LastTestedAt : DateTimeNullable"
}

class IWordAdminRepository <<repository_interface>> {
  "+ SearchAsync(query: AdminWordQuery, cancellationToken: CancellationToken) : TaskOfPagedCollectionOfAdminWordListItem"
  "+ WordKeyExistsAsync(wordKey: string, excludingId: uintNullable, cancellationToken: CancellationToken) : TaskOfbool"
  "+ WordExistsAsync(wordId: uint, includeDeleted: bool, cancellationToken: CancellationToken) : TaskOfbool"
  "+ SenseExistsAsync(wordId: uint, senseId: uint, includeDeleted: bool, cancellationToken: CancellationToken) : TaskOfbool"
  "+ MatchingSenseExistsAsync(wordId: uint, wordClass: string, englishDefinition: string, cancellationToken: CancellationToken) : TaskOfbool"
  "+ FindWordIdByKeyAsync(wordKey: string, cancellationToken: CancellationToken) : TaskOfuintNullable"
  "+ CreateAsync(command: CreateWordCommand, cancellationToken: CancellationToken) : TaskOfWordDetail"
  "+ CreateWithSenseAsync(word: CreateWordCommand, sense: CreateSenseCommand, cancellationToken: CancellationToken) : TaskOfWordDetail"
  "+ UpdateMetadataAsync(wordId: uint, command: UpdateWordCommand, cancellationToken: CancellationToken) : TaskOfWordDetailNullable"
  "+ UpdateMissingImportMetadataAsync(wordId: uint, metadata: ImportWordMetadata, cancellationToken: CancellationToken) : TaskOfboolNullable"
  "+ SetWordStatusAsync(wordId: uint, status: string, cancellationToken: CancellationToken) : TaskOfbool"
  "+ GetReferencingUserIdsAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfIReadOnlyCollectionOfuint"
  "+ SetImageUrlAsync(wordId: uint, url: stringNullable, cancellationToken: CancellationToken) : TaskOfWordDetailNullable"
  "+ UpsertAudioAsync(wordId: uint, media: StoredMedia, accent: stringNullable, cancellationToken: CancellationToken) : TaskOfWordAudioNullable"
  "+ SetAudioStatusAsync(wordId: uint, audioId: uint, status: string, cancellationToken: CancellationToken) : TaskOfbool"
  "+ CreateSenseAsync(wordId: uint, command: CreateSenseCommand, cancellationToken: CancellationToken) : TaskOfWordSenseNullable"
  "+ UpdateSenseAsync(wordId: uint, senseId: uint, command: UpdateSenseCommand, cancellationToken: CancellationToken) : TaskOfWordSenseNullable"
  "+ SetSenseStatusAsync(wordId: uint, senseId: uint, status: string, cancellationToken: CancellationToken) : TaskOfbool"
  "+ FindActiveTopicIdsByNamesAsync(names: IReadOnlyCollectionOfstring, cancellationToken: CancellationToken) : TaskOfIReadOnlyDictionaryOfstringuint"
  "+ AddTopicsAsync(wordId: uint, topicIds: IReadOnlyCollectionOfuint, cancellationToken: CancellationToken) : TaskOfint"
}

class WordAdminRepository <<repository>> {
  "- _dbContext : VocaNovaDbContext"
  --
  "+ SetWordStatusAsync(wordId: uint, status: string, cancellationToken: CancellationToken) : TaskOfBool"
  "+ GetReferencingUserIdsAsync(wordId: uint, cancellationToken: CancellationToken) : TaskOfListOfUint"
}

class VocaNovaDbContext <<dbcontext>> {
  "+ AgeRanges : DbSetOfAgeRange"
  "+ AiGradingCaches : DbSetOfAiGradingCache"
  "+ AuditLogs : DbSetOfAuditLog"
  "+ EducationLevels : DbSetOfEducationLevel"
  "+ LearningPurposes : DbSetOfLearningPurpose"
  "+ Occupations : DbSetOfOccupation"
  "+ OtpVerifications : DbSetOfOtpVerification"
  "+ RefreshTokens : DbSetOfRefreshToken"
  "+ Regions : DbSetOfRegion"
  "+ Roles : DbSetOfRole"
  "+ TestAnswers : DbSetOfTestAnswer"
  "+ TestSessions : DbSetOfTestSession"
  --
  "+ SaveChangesAsync(cancellationToken: CancellationToken) : TaskOfInt"
}

class MySQL_Database <<database>> {

}
VocabularyController ..> AdminWordsController
WordAdminRepository ..> VocaNovaDbContext
VocaNovaDbContext ..> MySQL_Database
WordAdminRepository ..> Word
IWordAdminService <|.. WordAdminService
AdminWordsController ..> IWordAdminService : SoftDeleteAsync()
IWordAdminRepository <|.. WordAdminRepository
WordAdminService ..> IWordAdminRepository : SetWordStatusAsync()
WordAdminRepository ..> UserListWord
WordAdminRepository ..> UserWordProgress
@enduml
